# coursework4

./: .gitignore  README.md  config.py  main.py  pyproject.toml
data/: Python  test.json  vacancies.json
src/: cbr.py  file_explorer.py  hh_api.py  utils.py  vacancy.py
tests/: test_file_exists.py
