[tool.poetry]
name = "coursework4"
version = "0.1.0"
description = ""
authors = ["Stanislav <stanislav.titarenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
lxml = "^5.2.2"
chmod = "^0.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
